# internal/platform/dtos/user_dtos.go
@@ -3,8 +3,9 @@ package dtos
 import "github.com/google/uuid"
 
 type ResponseUser struct {
-	ID       uuid.UUID `json:"id"`
-	Email    string    `json:"email"`
-	Roles    []string  `json:"roles"`
-	IsActive bool      `json:"is_active"`
+	ID             uuid.UUID `json:"id"`
+	Email          string    `json:"email"`
+	Roles          []string  `json:"roles"`
+	IsActive       bool      `json:"is_active"`
+	OrganizationId uuid.UUID `json:"organization_id"`
 }
